# Keyboards-firmware

key_lib/: Cargo.toml  build.rs  flake.nix
key_lib/src/: codes.rs  com.rs  config.rs  descriptor.rs  keys.rs  lib.rs  position.rs  report.rs  scan_codes.rs  slave_com.rs  storage.rs
tybeast_he/: Cargo.toml  flake.nix
tybeast_he/.cargo/: config.toml
tybeast_he/firmware/: Cargo.toml  elf.nix  flake.nix
tybeast_he/firmware/src/: indicator.rs  lib.rs  sensors.rs  slave_com.rs
tybeast_he/link/: Cargo.toml  README.md  flake.nix
tybeast_he/link/src/: main.rs
tybeast_he/src/: sensors.rs  slave_com.rs
tychocs/: Cargo.toml
tychocs/src/: key_config.rs  lib.rs  radio.rs  sensors.rs
tychocs/src/radio/: inner_radio.rs  mod.rs  packet.rs  radio.rs  simple.rs
