[package]
edition = "2021"
name = "tybeast-ones-he"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
key-lib = {path = "../key_lib/", features = ["hall-effect", "split"]}
embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.7.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040"
] }
rp2040-hal = "0.11.0"
embassy-usb = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }
embassy-usb-logger = { version = "0.5.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.29.0"
fixed-macro = "1.2"


cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.8"
usbd-hid = "0.8.2"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
embedded-sdmmc = "0.9.0"
num_enum = {version = "0.7.4", default-features = false}

sequential-storage = "5.0.0"
embedded-storage-async = "0.4.1"
smart-leds = "0.4.0"

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
